# ml-playground

./: .gitignore  Makefile  README.md
docker/: Dockerfile  entrypoint.sh  requirements.txt
src/: Makefile  pyproject.toml
src/dinov2/: pipe.ipynb
